--- a/app/components/nav/nav.css
+++ b/app/components/nav/nav.css
@@ -1,12 +1,26 @@
 .top-nav {
-    width: 100%;
+    width: calc(100% - 20px);
     height: 60px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
+    padding: 0 10px;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .nav-link {
     height: 100%;
-    width: 100px;
+    min-width: 100px;
+    width: fit-content;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+}
+
+.nav-link:hover {
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .nav-link.left {
@@ -15,4 +29,61 @@
 
 .nav-link.right {
     float: right;
+}
+
+.nav-link.active {
+    background-color: rgba(0, 0, 0, 0.15);
+    cursor: default;
+}
+
+.top-nav label {
+    display: none;
+}
+
+@media screen and (max-width: 520px) {
+    .top-nav {
+        width: 100%;
+        padding: 0;
+        position: relative;;
+    }
+
+    .top-nav label {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        font-weight: bold;
+        cursor: pointer;
+        user-select: none;
+    }
+
+    .top-nav input {
+        display: none;
+    }
+
+    .top-nav:has(input:checked) .nav-link {
+        display: flex;
+    }
+
+    .top-nav:has(input:checked) label {
+        background-color: rgba(0, 0, 0, 0.2);
+    }
+
+    .nav-link {
+        width: 100%;
+        position: relative;
+        z-index: 10;
+        display: none;
+        background-color: rgb(228, 228, 228);
+    }
+
+    .nav-link:hover {
+        background-color: rgb(210, 210, 210);
+    }
+
+    .nav-link.active {
+        background-color: rgb(191, 191, 191);
+    }
 }
