--- a/app/components/nav/nav.css
+++ b/app/components/nav/nav.css
@@ -1,9 +1,10 @@
 .top-nav {
     width: calc(100% - 20px);
     height: 60px;
+    min-height: 60px;
     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.2);
     padding: 0 10px;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgb(237, 237, 237);
 }
 
 .nav-link {
@@ -36,11 +37,51 @@
     cursor: default;
 }
 
+.nav-link:has(ul) {
+    position: relative;
+}
+
+.nav-link:has(ul):hover ul {
+    display: block;
+}
+
+.nav-link ul {
+    display: none;
+    position: absolute;
+    top: 100%;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    z-index: 11;
+    background-color: rgb(237, 237, 237);
+}
+
+.nav-link ul li {
+    display: block;
+    width: calc(100% - 20px);
+    padding: 10px;
+    text-align: center;
+    color: black;
+    list-style-type: none;
+}
+
+.nav-link ul a {
+    text-decoration: none;
+}
+
+.nav-link ul li.active {
+    background-color: rgb(200, 192, 201);
+}
+
+.nav-link ul li:not(.active):hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
 .top-nav label {
     display: none;
 }
 
-@media screen and (max-width: 520px) {
+@media screen and (max-width: 536px) {
     .top-nav {
         width: 100%;
         padding: 0;
@@ -65,6 +106,14 @@
 
     .top-nav:has(input:checked) .nav-link {
         display: flex;
+        flex-direction: column;
+        height: fit-content;
+        line-height: 50px;
+    }
+
+    .top-nav:has(input:checked) .nav-link li {
+        padding-top: 0;
+        padding-bottom: 0;
     }
 
     .top-nav:has(input:checked) label {
@@ -77,6 +126,10 @@
         z-index: 10;
         display: none;
         background-color: rgb(228, 228, 228);
+    }
+
+    .nav-link ul {
+        position: relative;
     }
 
     .nav-link:hover {
