--- a/app/components/chess-board/chess-board.css
+++ b/app/components/chess-board/chess-board.css
@@ -1,11 +1,9 @@
 .chess-board {
-    aspect-ratio: 1 / 1;
     background-size: contain;
+    background-repeat: no-repeat;
     position: relative;
-    
-    display: grid;
-    grid-template-columns: repeat(8, 1fr);
-    grid-template-rows: repeat(8, 1fr);
+    display: block;
+    aspect-ratio: 1 / 1;
 }
 
 .chess-board.standard {
@@ -13,13 +11,57 @@
 }
 
 .chess-board.cb-12 {
-    width: calc(100% - 40px);
+    width: min(calc(100% - 40px), min(calc(100vh - 100px), calc(100vw - 100px)));
+}
+
+.chess-board .piece-move-mark {
+    aspect-ratio: 1 / 1;
+    position: absolute;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.chess-board .piece-move-mark::after {
+    position: absolute;
+    content: '';
+    width: calc(100% / 3);
+    aspect-ratio: 1 / 1;
+    display: block;
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 50%;
+}
+
+.chess-board .piece-move-mark:hover::after,
+.chess-board .piece-move-mark.hovered::after {
+    background-color: rgba(42, 7, 104, 0.18)
 }
 
 .chess-board .chess-piece {
     background-size: contain;
     aspect-ratio: 1 / 1;
-    width: 100%;
+    position: absolute;
+    cursor: pointer;
+}
+
+.chess-board .chess-piece.dragging {
+    opacity: 0.75;
+}
+
+.chess-board .chess-piece.selected {
+    background-color: rgba(52, 0, 156, 0.3);
+}
+
+.chess-board .chess-piece.takeable:hover,
+.chess-board .chess-piece.takeable.hovered {
+    background-color: rgba(100, 55, 189, 0.15);
+}
+
+.chess-board .chess-piece.float {
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    cursor: pointer;
 }
 
 .chess-board.center {
@@ -38,17 +80,46 @@
     width: 100%;
 }
 
-.possible-move-mark {
-    width: 50%;
-    height: 50%;
-    border-radius: 50%;
-    background-color: rgba(0, 0, 0, 0.3);
-}
-
-.possible-move-mark.take-only {
+.piece-move-mark.take-only::after {
     background-color: rgba(179, 8, 28, 0.3);
 }
 
-.possible-move-mark.move-only {
+.piece-move-mark.move-only::after {
     background-color: rgba(9, 150, 16, 0.3);
+}
+
+.promotion-container {
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+
+.promotion-pieces-container {
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    height: fit-content;
+    padding: 5px;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    box-sizing: border-box;
+}
+
+.promotion-piece {
+    border: 2px solid black;
+    border-radius: 5px;
+    box-sizing: border-box;
+    background-size: contain;
+    cursor: pointer;
+}
+
+.promotion-piece:hover {
+    background-color: rgba(209, 209, 209, 0.3);
 }
