--- a/app/create/components/ConditionalSubform/conditional.css
+++ b/app/create/components/ConditionalSubform/conditional.css
@@ -313,6 +313,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    margin-bottom: 5px;
 }
 
 .condition-result-picks > label > span {
@@ -516,4 +517,8 @@
 
 .result-ally-list-btn:has(> span > label > input:checked) .result-ally-piece-list {
     display: flex;
+}
+
+.flip-checkbox {
+    margin: 10px 0 0;
 }
