--- a/app/global.css
+++ b/app/global.css
@@ -4,6 +4,7 @@ body {
     box-sizing: border-box;
     font-size: 100%;
     font-family: Helvetica, Arial, sans-serif;
+    overflow-x: hidden;
 }
 
 input {
